// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`safeInsertNode > returns updated tree including the inserted node 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": "10",
            "name": "category-3",
          },
        ],
        "id": "3",
        "name": "sub-category-1",
      },
    ],
    "id": "1",
    "name": "category-1",
  },
  {
    "children": [
      {
        "children": [],
        "id": "4",
        "name": "sub-category-2",
      },
    ],
    "id": "2",
    "name": "category-2",
  },
]
`;

exports[`safeInsertNode > returns updated tree including the inserted node 2`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": "20",
            "name": "category-10",
          },
        ],
        "id": "3",
        "name": "sub-category-1",
      },
    ],
    "id": "1",
    "name": "category-1",
  },
  {
    "children": [
      {
        "children": [],
        "id": "4",
        "name": "sub-category-2",
      },
    ],
    "id": "2",
    "name": "category-2",
  },
]
`;

exports[`safeInsertNode > returns updated tree including the inserted node at first level of tree within null destId 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": "3",
        "name": "sub-category-1",
      },
    ],
    "id": "1",
    "name": "category-1",
  },
  {
    "children": [
      {
        "children": [],
        "id": "4",
        "name": "sub-category-2",
      },
    ],
    "id": "2",
    "name": "category-2",
  },
  {
    "children": [],
    "id": "5",
    "name": "category-5",
  },
]
`;
